# gen-dylib

./: .gitignore  Cargo.toml  LICENSE  readme.md
examples/: manual.rs
gen_dylib_codegen/: Cargo.toml
src/: lib.rs
