[package]
name = "gen_dylib_codegen"
version = "0.1.0"
authors = ["tinaun <tinagma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gen_dylib_codegen"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"